src/test/ui/illegal-ufcs-drop.stderr
error[E0040]: explicit use of destructor method
  --> $DIR/illegal-ufcs-drop.rs:9:5
   |
LL |     Drop::drop(&mut Foo)
   |     ^^^^^^^^^^
   |     |
   |     explicit destructor calls not allowed
   |     help: consider using `drop` function: `drop`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0040`.
